<resources>
    <string name="app_name">Unsplash</string>
    <string name="search_hint">search e.g. \"potter\"</string>
    <string name="search_icon">search icon</string>
    <string name="no_results_found">No results found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="clear">Clear</string>
    <string name="sort_by">Sort By</string>
    <string name="color">Color</string>
    <string name="orientation">Orientation</string>
    <string name="cancel">Cancel</string>
    <string name="black_amp_white"><![CDATA[Black & White]]></string>
    <string name="any_colour">Any Colour</string>
    <string name="newest">Newest</string>
    <string name="relevance">Relevance</string>
    <string name="any">Any</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="square">Square</string>
    <string name="apply">Apply</string>
    <string name="download">Download</string>
</resources>