<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.advancedsearchpage.AdvancedSearchPageFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by" />

            <RadioGroup
                android:id="@+id/sort_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sort_by">

                <RadioButton
                    android:id="@+id/relevance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relevance" />

                <RadioButton
                    android:id="@+id/newest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newest" />
            </RadioGroup>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/sort_group"
                android:background="@color/black" />

            <TextView
                android:id="@+id/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider1"
                android:text="@string/color" />

            <RadioGroup
                android:id="@+id/color_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/color">

                <RadioButton
                    android:id="@+id/any_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any_colour" />

                <RadioButton
                    android:id="@+id/black_and_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/black_amp_white" />
            </RadioGroup>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/color_group"
                android:background="@color/black" />

            <TextView
                android:id="@+id/orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider2"
                android:text="@string/orientation" />

            <RadioGroup
                android:id="@+id/orientation_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/orientation">

                <RadioButton
                    android:id="@+id/any_orientation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any" />

                <RadioButton
                    android:id="@+id/portrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portrait" />

                <RadioButton
                    android:id="@+id/landscape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/landscape" />

                <RadioButton
                    android:id="@+id/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/square" />
            </RadioGroup>
        </RelativeLayout>
    </ScrollView>
    <TableLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/clear" />

            <Button
                android:id="@+id/apply_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/apply" />
        </TableRow>
    </TableLayout>
</RelativeLayout>